[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Flame2D/CeilingCorners.png" type="Texture" id=1]
[ext_resource path="res://Assets/Flame2D/FlameActivity.png" type="Texture" id=2]
[ext_resource path="res://Assets/Storage/StorageRoom_Base.png" type="Texture" id=3]
[ext_resource path="res://Assets/Flame2D/FlameBase.png" type="Texture" id=4]
[ext_resource path="res://Fonts/MenuTooltips.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/UI/UI_NinePatch.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Objects/UIObjects/MoveButtonRight.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Objects/UIObjects/MoveButtonDown.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Objects/StorageObjects/FallableTrophy1.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Objects/UIObjects/MoveButtonLeft.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/MainScenes/OLD_Storage.gd" type="Script" id=11]

[sub_resource type="Animation" id=1]
resource_name = "Randomiser"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8, 1.6, 2.3, 2.9, 3.4, 3.8, 4.9, 5.5, 6.4, 7.1, 7.7, 8.3, 8.8, 9.3, 9.8, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.22, 0.5, 0.44, 0.66, 0.8, 0.2, 0.6, 0.4, 0.8, 0.5, 0.75, 0.4, 0.9, 0.2, 0.4, 0.1, 1.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Randomiser"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../ActivityLight:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.2, 1.4, 2, 2.5, 3.3, 3.7, 4.3, 4.8, 5.3, 5.8, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 2.0, -4.0, 13.0, 3.0, -4.0, 2.0, -10.0, -1.0, 8.0, 3.0, 0.0 ]
}

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 2
emission_box_extents = Vector3( 400, 60, 1 )
flag_disable_z = true
direction = Vector3( -0.5, 1, 0 )
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 180.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 10.0
tangential_accel_random = 1.0
scale = 8.0
scale_random = 1.0
color = Color( 0.952941, 0.992157, 1, 1 )

[node name="Storage" type="Node2D"]
script = ExtResource( 11 )

[node name="DefaultElements" type="Node2D" parent="."]

[node name="UIElements" type="Control" parent="DefaultElements"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextPrompts" type="Control" parent="DefaultElements"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Firelight" type="Node2D" parent="DefaultElements"]

[node name="BaseLight" type="Light2D" parent="DefaultElements/Firelight"]
texture = ExtResource( 4 )
offset = Vector2( 640, 360 )
color = Color( 0.901961, 0.482353, 0.172549, 1 )
range_z_max = 10

[node name="BaseLightRandomiser" type="AnimationPlayer" parent="DefaultElements/Firelight/BaseLight"]
anims/Randomiser = SubResource( 1 )

[node name="CeilingSubtractive" type="Light2D" parent="DefaultElements/Firelight"]
texture = ExtResource( 1 )
offset = Vector2( 640, 360 )
mode = 1
range_z_max = 10
range_layer_max = 1

[node name="ActivityLight" type="Light2D" parent="DefaultElements/Firelight"]
position = Vector2( 600, 360 )
texture = ExtResource( 2 )
color = Color( 0.901961, 0.482353, 0.172549, 1 )
range_z_max = 10

[node name="ActivityLightRandomiser" type="AnimationPlayer" parent="DefaultElements/Firelight/ActivityLight"]
root_node = NodePath("../../BaseLight")
anims/Randomiser = SubResource( 2 )

[node name="Sprites" type="Node2D" parent="DefaultElements"]

[node name="OutsideSprite" type="Sprite" parent="DefaultElements/Sprites"]
light_mask = 16
z_index = -1
centered = false

[node name="BaseSprite" type="Sprite" parent="DefaultElements/Sprites"]
texture = ExtResource( 3 )
centered = false

[node name="DetailsSprite" type="Sprite" parent="DefaultElements/Sprites"]

[node name="SnowBackground" type="Particles2D" parent="DefaultElements/Sprites"]
light_mask = 16
position = Vector2( 981, -33 )
z_index = -1
amount = 200
lifetime = 5.0
preprocess = 20.0
visibility_rect = Rect2( -100, -100, 1200, 800 )
process_material = SubResource( 3 )

[node name="MovementButtons" type="Node2D" parent="DefaultElements"]

[node name="MoveButtonLeft" parent="DefaultElements/MovementButtons" instance=ExtResource( 10 )]
light_mask = 0
position = Vector2( 50, 300 )
z_index = 20

[node name="MoveButtonRight" parent="DefaultElements/MovementButtons" instance=ExtResource( 7 )]
light_mask = 0
position = Vector2( 1230, 300 )
z_index = 20

[node name="MoveButtonDown" parent="DefaultElements/MovementButtons" instance=ExtResource( 8 )]
light_mask = 0
position = Vector2( 640, 670 )
z_index = 20

[node name="Tooltips" type="Control" parent="."]
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TooltipStorage" type="MarginContainer" parent="Tooltips"]
light_mask = 0
margin_left = 718.0
margin_top = 84.0
margin_right = 1118.0
margin_bottom = 233.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TooltipRect" type="NinePatchRect" parent="Tooltips/TooltipStorage"]
light_mask = 0
margin_right = 400.0
margin_bottom = 149.0
texture = ExtResource( 6 )
region_rect = Rect2( -0.109245, -0.00251293, 72.0668, 72.1922 )
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Tooltips/TooltipStorage"]
light_mask = 0
margin_right = 400.0
margin_bottom = 149.0
mouse_filter = 2

[node name="TooltipLabel" type="Label" parent="Tooltips/TooltipStorage/CenterContainer"]
light_mask = 0
margin_left = 23.0
margin_top = 10.0
margin_right = 377.0
margin_bottom = 139.0
custom_colors/font_color = Color( 0.298039, 0.298039, 0.298039, 1 )
custom_colors/font_color_shadow = Color( 0.403922, 0.403922, 0.403922, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Marnie just wants you to do a few small
things while you cat-sit.
The plants need to be watered, and the 
place needs to be kept tidy."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameObjects" type="Node2D" parent="."]

[node name="FallableTrophy1" parent="GameObjects" instance=ExtResource( 9 )]
position = Vector2( 242, 330 )
